# TestPoetry

./: test.pu
sub1/: pyproject.toml  test.py
sub1/sub1/: __init__.py
sub2/: pyproject.toml  test.py
sub2/sub2/: __init__.py
sub_core/: pyproject.toml  test.py
sub_core/sub_core/: __init__.py
sub_integrate/: pyproject.toml
sub_integrate/sub_integrate/: __init__.py
