[tool.poetry]
name = "sub1"
version = "0.1.0"
description = ""
authors = ["elda27 <kaz.birdstick@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sub_core = {path="../sub_core"}
sub1 = {path="../sub1"}
sub2 = {path="../sub2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
